# printer-monitor

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  commands.txt  docker-compose.yml
.github/workflows/: docker.yml
src/: config.rs  detection.rs  main.rs  obico.rs  prusalink.rs  rtsp_capture.rs  schedule.rs  server.rs  settings.rs  snapshot.rs  telegram.rs
