[package]
name = "printer-monitor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "ML-based 3D printer failure detection with automatic pause and Telegram alerts"
repository = "https://github.com/xorza/printer-monitor"
keywords = ["3d-printing", "prusa", "monitoring", "obico"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
teloxide = { version = "0.17", features = ["macros"] }
axum = "0.8"
bytes = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.18"
